@@ -1,3 +1,8 @@
+2008-09-25  Michael Hutchinson <mhutchinson@novell.com> 
+
+	* MonoDevelop.DesignerSupport/ClassOutlineTextEditorExtension.cs: Track
+	  API, fix .ctor display formatting.
+
 2008-09-17  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* MonoDevelop.DesignerSupport.mdp: Updated projects.
